--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "@types/three": "^0.172.0",
+    "keyboard-css": "^1.2.4",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
